<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".fragments.SearchFragment"
                                                   android:id="@+id/frameLayout3">
    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageTopGuideline"
            app:layout_constraintGuide_percent="0.075"
    />

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/imageView"
            android:contentDescription="@string/the_logo_of_the_app"
            app:srcCompat="@drawable/ic_smartphone"
            app:layout_constraintTop_toBottomOf="@+id/imageTopGuideline"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
            android:adjustViewBounds="true"
    />

    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelineBottom"
            app:layout_constraintGuide_percent="0.35"/>

    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelineHalfScreen"
            app:layout_constraintGuide_percent="0.40"/>

    <EditText
            android:id="@+id/inputText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/edit_text_placeholder"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:maxLength="20"
            app:layout_constraintTop_toBottomOf="@+id/guidelineHalfScreen"
            android:importantForAutofill="no" tools:targetApi="o"
    />

    <Button style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:text="@string/search_by_name"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/search_name_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@+id/inputText"
    />

    <Button style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:text="@string/search_by_brand"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/search_brand_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_name_button"
    />
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"
    />

</androidx.constraintlayout.widget.ConstraintLayout>