<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/device_row"
              android:orientation="horizontal">


    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
...
                    android:text="@string/name_placeholder"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/deviceNameTextView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/favoriteIndicatorImageView"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:layout_marginEnd="10dp"/>
...
